automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Understand that derivatives are the instantaneous rate of change of a function\n",
+    "* Understand that **derivatives are the instantaneous rate of change of a function\n",
     "* Understand how to calculate a derivative \n",
     "* Understand how to express taking a derivative at a given point, and evaluating a function at a given point mathematically"
    ]
