--- a/index.ipynb
+++ b/index.ipynb
@@ -151,6 +151,7 @@
     "print(six)\n",
     "\n",
     "trace_x_squared = function_values_trace(x_squared, six)\n",
+    "print(t)\n",
     "layout = build_layout(x_axis = {'title': 'number of seconds'}, y_axis = {'title': 'distance'})\n",
     "plot([trace_x_squared], layout)"
    ]
